V2.0 design upgrade